crates/libs/lib-core/tests/ui/authorization/case_permit_is_not_user_permit.stderr
error[E0308]: mismatched types
 --> tests/ui/authorization/case_permit_is_not_user_permit.rs:8:13
  |
8 |     user_write(permit);
  |     ---------- ^^^^^^ expected `UserResource`, found `CaseResource`
  |     |
  |     arguments to this function are incorrect
  |
  = note: expected struct `AuthorizedMutation<'_, lib_core::authorization::Existing<UserResource>>`
             found struct `AuthorizedMutation<'_, lib_core::authorization::Existing<CaseResource>>`
note: function defined here
 --> tests/ui/authorization/case_permit_is_not_user_permit.rs:5:4
  |
5 | fn user_write(_permit: AuthorizedMutation<'_, Existing<UserResource>>) {}
  |    ^^^^^^^^^^ -------------------------------------------------------
